# QtCpp-Autotools-Skeleton

./: Makefile.am  README.md  config.h.in  configure.ac
m4/: README.md
src/: Makefile.am
src/app/: Makefile.am  mainwidget.cc  mainwidget.h  mainwidget.ui
src/lib/: Makefile.am
tests/: Makefile.am
